my solution to send ingredients

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "prettierr": "^1.15.3-dev",
     "prop-types": "^15.7.2",
+    "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
